--- a/Projetos_web/016/index.html
+++ b/Projetos_web/016/index.html
@@ -47,6 +47,8 @@
                 <li>quarto elemento</li>
                 <li class="cor">quinto elemento</li>
                 <li>sexto elemento</li>
+                <li>sétimo elemento</li>
+                <li>oitavo elemento</li>
             </ul>
         </div>
 
