--- a/Projetos_web/001/index.html
+++ b/Projetos_web/001/index.html
@@ -2,10 +2,10 @@
 
 <html>
     <Head>
-
+             Título, ícone, metadado, import de scritp, etc.
     </Head>
 
     <body>
-        
+       <p> Parágrafo</p> Conteúdo visível ( conteúdo )
     </body>
 </html>
