--- a/Projetos_web/002/index.html
+++ b/Projetos_web/002/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html>
-
-    <head>
-
-    </head>
-
-    <body>
-        <p>Este é um parágrafo de HTML</p>
-    </body>
-
+<html lang="en">
+<head>
+   <title>Título</title>
+</head>
+<body>
+    <p>Este é um parágrafo de HTML</p>
+    <p>Outro parágrafo</p>
+</body>
 </html>
