--- a/Projetos_web/003/index.html
+++ b/Projetos_web/003/index.html
@@ -13,6 +13,7 @@
     <p><small>Fonte: <i>Agência de Viagem Interplanetárias</i></small></p>
 
     <!--Imagem-->
+    <img src="planet_mars.jpg" alt="">
 
     <p>Já Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
         Quasi quisquam suscipit reprehenderit deleniti. Ipsum, soluta sint 
@@ -24,6 +25,36 @@
 
     <h3>O que necessito para viajar</h3>
     <p>Para viajar para Marte vai ser necessário: </p>
+
+    <ul>
+        <li>Exames m´dicos</li>
+        <li>Duas Semanas de treino</li>
+        <li>Passaporte interestelar</li>
+        <li>Assinar termo de responsabilidade</li>
+        <li>Si si fu fu</li>
+
+    </ul>
+
+    <h3>Procedimentos antes da viagem</h3>
+    <ol> 
+        <li>Escolher a data da viagem</li>
+        <li>Efetuar pagamento</li>
+        <li>Participar duas semanas de treino</li>
+        <li>Assinar termo de responsabilidade</li>
+    </ol>
+
+    <h2>Muito importante</h2>
+    <p>A viagem só está disponível</p>
+    <p>Obter informações</p>
+
+    <!--link -->
+    <a href="https://www.google.com.br/?hl=pt-BR"> Procure no google</a>
+    <a href="#">O link não funciona</a>
+    <a href="#">Este link também não</a>
+
+
+    <h3>Estamos à sua espera</h3>
+
 
     </body>
 </html> 
