--- a/paginas/html_basico.html
+++ b/paginas/html_basico.html
@@ -6,6 +6,12 @@
 <body>
     <h1> body onde fica conteúdo da página</h1>
     <p>parágrafo</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing 
+        elit. Ipsum, accusantium! Veritatis culpa reprehenderit
+        veniam dolores autem dignissimos accusamus, beatae nulla
+        inventore sed vitae! Dicta eveniet enim rem molestiae 
+        et.
+    </p>
     <p> parágrafo </p>
     <ol></ol>
     <u></u>
