--- a/paginas/html_basico.html
+++ b/paginas/html_basico.html
@@ -20,7 +20,7 @@
     <i></i>
     <u>teste u</u>
     <hr>
-    <a href="#" > link  </a>
+    <a href="https://www.google.com.br/?hl=pt-BR" > Visite o google  </a>
 </body>
 
 
