--- a/noticia.html
+++ b/noticia.html
@@ -24,7 +24,10 @@
         O que é necessário para viajar?
     </h3>
     <p>Para viajar para marte será necessário: </p>
-    
+    <p>Para viajar para marte será necessário: </p>
+    <p>Para viajar para marte será necessário: </p>
+    <p>Para viajar para marte será necessário: </p>
+
     
 
 
