--- a/01 - TESTES PAGINAS/stunning.html
+++ b/01 - TESTES PAGINAS/stunning.html
@@ -48,7 +48,7 @@
                     <div class="description">
                         <h4>New technologies</h4>
                         <p>Space engineering becomes
-                         more and more advanced</p>
+                         more and more advanced text</p>
                     </div>
                 </div>
             </label>
