--- a/01 - TESTES PAGINAS/stunning.html
+++ b/01 - TESTES PAGINAS/stunning.html
@@ -38,6 +38,7 @@
                     <div class="description">
                         <h4>Globalization</h4>
                         <p>Help people all over the world</p>
+                        <div></div>
                     </div>
                 </div>
             </label>
