--- a/page_2.html
+++ b/page_2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>Primeiro website</title>
+    <title>Página 2</title>
 
 </head>
 <body>
@@ -14,7 +14,7 @@
         <a href="page_3.html">Page 3</a>
     </nav>
     <div>
-        <img src="imagem/laranja-1513012240348_v2_4x3.jpg" alt="imagem logo">
+        <img src="imagem/mic-antiques-banana_box.png" alt="imagem logo">
     </div>
 
     <article>
