--- a/20.html
+++ b/20.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favicon</title>
+    <link rel="shortcut icon" href="imagem/favicon.png" type="image/png">
+
+
+
 </head>
 <body style="background-color: black; color: azure;">
     Olá Mundo!
