--- a/28.html
+++ b/28.html
@@ -8,13 +8,17 @@
   <!--Cabeçalho-->
   <header>
   <a href="index.html"></a> 
-  <img src="" alt="" title=""> 
+  <img src=" " alt="" title=" "> 
   <h3>Inteligência artificial</h3> 
   </header>
 
   <!--Navegação-->
   <nav>
-    <a href=""></a>
+    <a href=" ">Quem somos</a>
+    <a href=" ">Nossos serviços</a>
+    <a href=" ">Contatos</a>
+
+
   </nav>
 
    
