--- a/28.html
+++ b/28.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-       <title>Exercício parte 1</title>
+  <title>Exercício parte 1</title>
 </head>
+
 <body>
 
   <!--Cabeçalho-->
   <header>
-  <a href="index.html"></a> 
-  <img src=" " alt="" title=" "> 
-  <h3>Inteligência artificial</h3> 
+    <a href="28.html"></a>
+    <img src="images/logo_empresa.png" alt="logo_empresa" title="Inteligência artificial">
+    <h3>Inteligência artificial</h3>
   </header>
 
   <!--Navegação-->
@@ -17,10 +19,53 @@
     <a href=" ">Quem somos</a>
     <a href=" ">Nossos serviços</a>
     <a href=" ">Contatos</a>
-
-
   </nav>
+  <br>
 
-   
+  <!--Quem somos-->
+  <section>
+    <article>
+      <img src="images/icon_ai.png" alt="icone" alt="Inteligência artificial">
+      <p>
+        Somos especialistas e, <span class="serviços-texto-realce">Inteligência artifical (AI)</span><br>
+        Trabalhamos para encontrar soluções tecnologicamente inteligentes para todas as áreas empresariais.
+      </p>
+    </article>
+  </section>
+
+  <section>
+    <article>
+      <img src="images/icon_lab.png" alt="icone" alt="Laboratório moderno">
+      <p>
+        Somos especialistas e, <span class="serviços-texto-realce">Inteligência artifical (AI)</span><br>
+        Trabalhamos para encontrar soluções tecnologicamente inteligentes para todas as áreas empresariais.
+      </p>
+    </article>
+  </section>
+
+  <section>
+    <article>
+      <img src="images/icon_computer.png" alt="icone" alt="Programadores experientes">
+      <p>
+        Somos especialistas e, <span class="serviços-texto-realce">Inteligência artifical (AI)</span><br>
+        Trabalhamos para encontrar soluções tecnologicamente inteligentes para todas as áreas empresariais.
+      </p>
+    </article>
+  </section>
+
+  <!--Ver serviços ou contatos-->
+  <section>
+    <h1>Obtenha mais informações</h1>
+    <div>
+      <a href="servicos.html">Ver serviços</a>
+      <a href="contactos.html">Contatos</a>
+    </div>
+  </section>
+
+  <footer>
+    Inteligência artificial &copy; 2030 | &reg; Todos direitos reservados.
+  </footer>
+
 </body>
+
 </html>
