--- a/28.html
+++ b/28.html
@@ -3,22 +3,29 @@
 
 <head>
   <title>Exercício parte 1</title>
+
+  <!--estilos de página-->
+  <link rel="stylesheet" href="28.css">
+
+  <!--favicon-->
+  <link rel="stylesheet" href="images/logo_empresa.png" type="image/png">
+
 </head>
 
 <body>
 
   <!--Cabeçalho-->
-  <header>
+  <header class="container-cabecalho">
     <a href="28.html"></a>
     <img src="images/logo_empresa.png" alt="logo_empresa" title="Inteligência artificial">
     <h3>Inteligência artificial</h3>
   </header>
 
   <!--Navegação-->
-  <nav>
-    <a href=" ">Quem somos</a>
-    <a href=" ">Nossos serviços</a>
-    <a href=" ">Contatos</a>
+  <nav class="container-navegacao">
+    <a href="index.html">Quem somos</a>
+    <a href="servicos.html">Nossos serviços</a>
+    <a href="contatos.html">Contatos</a>
   </nav>
   <br>
 
