--- a/28.html
+++ b/28.html
@@ -30,40 +30,40 @@
   <br>
 
   <!--Quem somos-->
-  <section>
-    <article>
-      <img src="images/icon_ai.png" alt="icone" alt="Inteligência artificial">
-      <p>
-        Somos especialistas e, <span class="serviços-texto-realce">Inteligência artifical (AI)</span><br>
+  <section class="container-quem-somos">
+    <article class="servico">
+      <img src="images/icon_ai.png" class="icone" alt="icone" alt="Inteligência artificial">
+      <p class="servico-texto">
+        Somos especialistas e, <span class="servico-texto-realce">Inteligência artifical (AI)</span><br>
         Trabalhamos para encontrar soluções tecnologicamente inteligentes para todas as áreas empresariais.
       </p>
     </article>
   </section>
 
-  <section>
-    <article>
-      <img src="images/icon_lab.png" alt="icone" alt="Laboratório moderno">
-      <p>
-        Somos especialistas e, <span class="serviços-texto-realce">Inteligência artifical (AI)</span><br>
+  <section class="container-quem-somos">
+    <article class="servico">
+      <img src="images/icon_lab.png" class="icone" alt="icone" alt="Laboratório moderno">
+      <p class="servico-texto">
+        Somos especialistas e, <span class="servico-texto-realce">Inteligência artifical (AI)</span><br>
         Trabalhamos para encontrar soluções tecnologicamente inteligentes para todas as áreas empresariais.
       </p>
     </article>
   </section>
 
-  <section>
-    <article>
-      <img src="images/icon_computer.png" alt="icone" alt="Programadores experientes">
-      <p>
-        Somos especialistas e, <span class="serviços-texto-realce">Inteligência artifical (AI)</span><br>
+  <section class="container-quem-somos">
+    <article class="servico">
+      <img src="images/icon_computer.png" class="icone" alt="icone" alt="Programadores experientes">
+      <p class="servico-texto">
+        Somos especialistas e, <span class="servico-texto-realce">Inteligência artifical (AI)</span><br>
         Trabalhamos para encontrar soluções tecnologicamente inteligentes para todas as áreas empresariais.
       </p>
     </article>
   </section>
 
   <!--Ver serviços ou contatos-->
-  <section>
+  <section class="container-servico-cantactos">
     <h1>Obtenha mais informações</h1>
-    <div>
+    <div class="botoes-servico-contactos">
       <a href="servicos.html">Ver serviços</a>
       <a href="contactos.html">Contatos</a>
     </div>
