--- a/01 - AULAS/05.html
+++ b/01 - AULAS/05.html
@@ -3,6 +3,21 @@
 
 <head>
     <title>Tabela</title>
+    <style>
+        table, th, td{
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+
+        th, td{
+            padding: 5px;
+        }
+
+        th{
+            background-color: green;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,19 +31,19 @@
         </thead>
         <tbody>
             <tr>
-                <td>Coluna 1 - linha 1</td>
+                <th>Coluna 1 - linha 1</th>
                 <td>Coluna 2 - linha 1</td>
                 <td>coluna 3 - linha 1</td>
             </tr>
             <tr>
-                <td>Coluna 1 - linha 2</td>
+                <th>Coluna 1 - linha 2</th>
                 <td>Coluna 2 - linha 2</td>
                 <td>coluna 3 - linha 2</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-            <td>Rodapé 1</td>
+            <th>Rodapé 1</th>
             <td>Rodapé 2</td>
             <td>Rodapé 3</td>
         </tr>
