--- a/100  - PROJETO 0/index.html
+++ b/100  - PROJETO 0/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="assets/libs/">
     <link rel="stylesheet" href="assets/css/main.css">
     <script src="assets/js/app.js" defer></script>
 
 </head>
 <body>
-    
+      
+
+
+
 </body>
 </html>
