--- a/GRUPO_F/formulario.html
+++ b/GRUPO_F/formulario.html
@@ -11,11 +11,11 @@
         <form method="post" action="index.php"> <br>
             <h1>Sistema Nome_GrupoF</h1> <br>
             <label for="nome">Nome</label>
-            <input type="text" size="50" placeholder="Nome">
+            <input type="text" size="50" placeholder="Nome"> <br>
             <label for="cpf">CPF</label>
             <input type="text" placeholder="111.111.111-00"> <br> <br>
             <label for="">Email</label>
-            <input type="text" size="40" placeholder="email">
+            <input type="text" size="40" placeholder="email"> <br>
             <label for="rg">RG</label>
             <input type="text"placeholder="111.111.111-00"> <br> <br>
             <label for="sexo">Sexo</label> &nbsp;
@@ -66,14 +66,14 @@
                 </optgroup>
             </select>
         <label for="cidade">Cidade</label> <br> <br>
-        <input type="text" placeholder="Cidade"> 
+        <input type="text" placeholder="Cidade">  <br>
         <label for="cep">CEP</label> 
-        <input type="text" placeholder="11111-111">
+        <input type="text" placeholder="11111-111"> <br>
         <label for="bairro">Bairro</label>
-        <input type="text" placeholder="Bairro"> 
+        <input type="text" placeholder="Bairro"> <br>
         <label for="rua">Rua</label>
         <input type="text" size="40" placeholder="Logradouro">
-        <label for="numero">Númeor</label>
+        <label for="numero">Númeor</label> <br>
         <input type="text" size="5" placeholder="Número"> <br> <br>
         <label for="complemento">Complemento</label>
         <input type="text" size="30" placeholder="Andar, Apartamento, Bloco"> <br> <br>
