--- a/GRUPO_F/formulario.html
+++ b/GRUPO_F/formulario.html
@@ -9,14 +9,14 @@
 <body>
     <div class="form">
         <form method="post" action="index.php"> <br>
-            <h1>Sistema Nome_GrupoF</h1> <br>
-            <label for="nome">Nome</label>
+            <h1>Sistema Nome_GrupoF</h1> <br> <br>
+            <label for="nome">Nome</label> <br>
             <input type="text" size="40" placeholder="Nome"> <br>
-            <label for="cpf">CPF</label>
+            <label for="cpf">CPF</label> <br>
             <input type="text" placeholder="111.111.111-00"> <br> <br>
-            <label for="">Email</label>
+            <label for="">Email</label> <br>
             <input type="text" size="40" placeholder="email"> <br>
-            <label for="rg">RG</label>
+            <label for="rg">RG</label> <br>
             <input type="text"placeholder="111.111.111-00"> <br> <br>
             <label for="sexo">Sexo</label> &nbsp;
             <label for="Masculino">Masculino</label>
