--- a/GRUPO_F/formulario.html
+++ b/GRUPO_F/formulario.html
@@ -67,15 +67,15 @@
             </select>
         <label for="cidade">Cidade</label> <br> <br>
         <input type="text" placeholder="Cidade">  <br>
-        <label for="cep">CEP</label> 
+        <label for="cep">CEP</label>  <br>
         <input type="text" placeholder="11111-111"> <br>
-        <label for="bairro">Bairro</label>
+        <label for="bairro">Bairro</label>  <br>
         <input type="text" placeholder="Bairro"> <br>
-        <label for="rua">Rua</label>
-        <input type="text" size="40" placeholder="Logradouro">
-        <label for="numero">Númeor</label> <br>
+        <label for="rua">Rua</label>  <br>
+        <input type="text" size="40" placeholder="Logradouro">  <br>
+        <label for="numero">Número</label> <br>
         <input type="text" size="5" placeholder="Número"> <br> <br>
-        <label for="complemento">Complemento</label>
+        <label for="complemento">Complemento</label>  <br>
         <input type="text" size="30" placeholder="Andar, Apartamento, Bloco"> <br> <br>
         <input type="submit" value="Enviar"> &nbsp; &nbsp;
         <input type="button" value="voltar">
