--- a/99 - GAME/index.html
+++ b/99 - GAME/index.html
@@ -14,6 +14,9 @@
         <img src="./IMAGES/mario.gif" class="mario">
         <img src="./IMAGES/pipe.png" class="pipe">
 
+        <img src="/renatotrabalhos.io/1280.gif" alt="">
+
+
     </div>
     
 </body>
