--- a/05 - AULAS/01.html
+++ b/05 - AULAS/01.html
@@ -9,8 +9,16 @@
             box-shadow: inset 0 0 1px black;
         }
 
+        .container{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+
         div{
             padding: 10px;
+            width: 40%;
+
         }
 
         .child-1{
@@ -44,19 +52,19 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, laboriosam.
             </div>
 
-            <div class="child-2"></div>
+            <div class="child-2">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, laboriosam.
             </div>
 
-            <div class="child-3"></div>
+            <div class="child-3">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, laboriosam.
             </div>
 
-            <div class="child-4"></div>
+            <div class="child-4">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, laboriosam.
             </div>
 
-            <div class="child-5"></div>
+            <div class="child-5">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, laboriosam.
             </div>
 
