--- a/COKING/modelo2/politica.html
+++ b/COKING/modelo2/politica.html
@@ -41,7 +41,7 @@
            outras informações encontradas em seu computador ou dispositivo móvel. 
            Os cookies são armazenados na pasta do navegador em seu equipamento.</p>
            <p class="p"><b>PARA QUE SERVEM OS <i>COOKIES</i>?</b></p>
-           <p class="p">A utilização de <i>cookies</i> é algo comum em qualquer <i>website</i> atualmente e o seu uso não prejudica os dispositivos (computadores, <i>smartphones</i>, <i>tablets</i>, etc.) em que são armazenados.</p>
+           <p class="p">A utilização de <i>cookies</i> é algo com@import um em qualquer <i>website</i> atualmente e o seu uso não prejudica os dispositivos (computadores, <i>smartphones</i>, <i>tablets</i>, etc.) em que são armazenados.</p>
            <p class="p">Os <i>cookies</i> permitem que nosso <i>website</i> 
            memorize informações sobre a sua visita, o seu idioma preferido, a sua 
            localização, a recorrência das suas sessões e outras variáveis que nós 
@@ -205,17 +205,19 @@
 
     <!--cookie button-->
 
-<div class="cookie" id="cookie">
-    <div class="cookie-texto">
-        <p>Este site usa cookies e tecnologias afins, que são pequenos arquivos ou pedaços de texto baixados para um aparelho quando o visitante acessa um website ou aplicativo. Ao utilizar nosso site você está de acordo com a utilização dos cookies para te proporcionar uma melhor experiência.</p>
-        
-        <div class="cookie-btn">
-            <button>Aceito</button>
-        </div>    
+    <div class="cookies-msg" id="cookies-msg">
+        <div class="cookies-txt">
+            <p>Este site usa cookies e tecnologias afins, que são pequenos arquivos ou pedaços de texto baixados para um 
+                aparelho quando o visitante acessa um website ou aplicativo. Ao utilizar nosso site você está de acordo 
+                com a utilização dos cookies para te proporcionar uma melhor experiência.</p>
+
+            <div class="cookies-btn">
+                <button onclick="aceito()">Aceito</button>
+            </div>
+        </div>
     </div>
-</div>
 
-
+    <script src="cookies.js"></script>
     
 </body>
 </html>
