--- a/TUDO/renatooffice/html/index.html
+++ b/TUDO/renatooffice/html/index.html
@@ -22,7 +22,7 @@
 
 			<div class="container header-wrapper">
 
-				<div class="top-line">
+				<div class="top-linAs an environmental charity, we’re on a mission to make it simple fe">
 
 					<div class="row">
 
@@ -58,8 +58,8 @@
 					<div class="header-content__slide active">
 						<h1 class="letters">Renato</h1>
 						<div class="header-content__info">
-							<p>As an environmental charity, we’re on a mission to make it simple for everyone to help the environment by planting each one tree!</p><br>
-							<button class="button button--main">Plant a tree now</button>
+							<p>“Desenvolvedor web e programador.”</p><br>
+							<button class="button button--main">Portifólio</button>
 						</div>
 					</div>
 
