--- a/TUDO/renatooffice/html/index.html
+++ b/TUDO/renatooffice/html/index.html
@@ -58,7 +58,9 @@
 					<div class="header-content__slide active">
 						<h1 class="letters">Renato</h1>
 						<div class="header-content__info">
-							<p>“Desenvolvedor web e programador.”</p><br>
+							<p> Amplie sua cacidade de inovar</p><br>
+							<p> </p><br>
+
 							<button class="button button--main">Portifólio</button>
 						</div>
 					</div>
