--- a/05 - AULAS/08.html
+++ b/05 - AULAS/08.html
@@ -9,8 +9,8 @@
 <body>
 
     <form action="#" method="post">
-        <p>&times</p>
-        <p>Login Form</p>
+        <p class="login-close">&times</p>
+        <p class="login-title">Login Form</p>
         <div>
             <label>Email or Phone</label>
             <input type="text" name="text_email_phone">
@@ -19,9 +19,9 @@
             <label>Password</label>
             <input type="password" name="text_password">
         </div>
-        <a href="#">Forgot Password?</a>
-        <input type="text" value="LOGIN">
-        <p>Not a member?<a href="#">Signup Now</a></p>
+        <a href="#" class="login-link-forgot-password">Forgot Password?</a>
+        <input type="text" value="LOGIN" class="login-button">
+        <p class="not-a-member">Not a member?<a href="#" class="login-link-signup-now">Signup Now</a></p>
 
     </form>
 
