--- a/9.html
+++ b/9.html
@@ -13,7 +13,8 @@
             display: grid;
             height: 100vh;
            /* grid-template-columns: 1fr 1fr;*/
-           grid-template-columns: 20% 20% 70%;
+           grid-template-columns: 20% 20% 60%;
+           grid-template-rows: 20% 60%; 
         }
         div{
             font-size: 40px;
